@@ -3,6 +3,8 @@
       screen size
     - Added support for add and remove favorites
     - Added support for show Takeoff in full screen mode or float mode
+    - Is possible edit the applications making right click in the panel icon
+    - Added a tooltip to the panel icon
       
     - Added the following translations:
       Italian (Caig)
